[gd_scene load_steps=20 format=3 uid="uid://djskn3te3j2kl"]

[ext_resource type="Texture2D" uid="uid://c87ojw4yeuuud" path="res://ui/right_arrow.svg" id="1_5rmpm"]
[ext_resource type="Script" path="res://ui/main_menu.gd" id="1_qtlmi"]
[ext_resource type="Texture2D" uid="uid://cx5jv7ket5fqd" path="res://ship/sprites/cabinet_sprites/swordfish_light.png" id="2_0tt54"]
[ext_resource type="Texture2D" uid="uid://cb8a4xyyns160" path="res://ship/sprites/cabinet_sprites/scrapper_light.png" id="3_ije5a"]
[ext_resource type="Texture2D" uid="uid://btt50nabpvd5a" path="res://ship/sprites/hammerhead.png" id="4_ky7au"]
[ext_resource type="Theme" uid="uid://h2qn3r626o1h" path="res://ui/ui_theme.tres" id="5_85q3v"]
[ext_resource type="Resource" uid="uid://natcbjmon8y2" path="res://ship/stats/scout_ship_stats.tres" id="5_mf37f"]
[ext_resource type="Resource" uid="uid://cbmn1wqvamq0r" path="res://ship/stats/stock_ship_stats.tres" id="6_na07h"]
[ext_resource type="PackedScene" uid="uid://6i3n35apo5nh" path="res://ui/stat_panel.tscn" id="7_cpdse"]
[ext_resource type="Resource" uid="uid://c1q7efuyhhpgm" path="res://ship/stats/tank_ship_stats.tres" id="7_scpje"]
[ext_resource type="Texture2D" uid="uid://i7bjdg6cqpox" path="res://ui/stingray_pilot.png" id="8_th1bv"]
[ext_resource type="Texture2D" uid="uid://tgs1xepeqnci" path="res://ui/scrapper_pilot.png" id="9_a76t2"]
[ext_resource type="Texture2D" uid="uid://co4ts1yuohi6k" path="res://ui/gooper_pilot.png" id="10_0qnnm"]
[ext_resource type="AudioStream" uid="uid://c6yf7nnlhdc5n" path="res://ui/sfx/ui_change_selection.wav" id="11_lwe4g"]
[ext_resource type="FontFile" uid="uid://0ndhcu0cdrox" path="res://ui/pilot-command-font/PilotCommandCondensed-x358r.otf" id="12_e2axg"]
[ext_resource type="AudioStream" uid="uid://de2xed632gt3t" path="res://ui/sfx/ui_error.wav" id="12_kvqf3"]

[sub_resource type="Animation" id="Animation_07qyc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_yjil3"]
resource_name = "flash"
length = 0.7
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ft7pv"]
_data = {
"RESET": SubResource("Animation_07qyc"),
"flash": SubResource("Animation_yjil3")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
script = ExtResource("1_qtlmi")
ships_sprites = [ExtResource("2_0tt54"), ExtResource("3_ije5a"), ExtResource("4_ky7au")]
ship_stats = [ExtResource("5_mf37f"), ExtResource("6_na07h"), ExtResource("7_scpje")]
pilots = Array[Texture2D]([ExtResource("8_th1bv"), ExtResource("9_a76t2"), ExtResource("10_0qnnm")])

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0.0392157, 1)

[node name="Pilot1" type="TextureRect" parent="."]
modulate = Color(0.27451, 0.27451, 0.27451, 1)
layout_mode = 0
offset_left = 60.0
offset_top = 152.0
offset_right = 472.0
offset_bottom = 461.0
texture = ExtResource("9_a76t2")
expand_mode = 3
stretch_mode = 5

[node name="Pilot2" type="TextureRect" parent="."]
modulate = Color(0.27451, 0.27451, 0.27451, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 1.007
anchor_right = 1.007
offset_left = -472.0
offset_top = 152.0
offset_right = -60.0
offset_bottom = 461.0
grow_horizontal = 0
texture = ExtResource("9_a76t2")
expand_mode = 3
stretch_mode = 5
flip_h = true
metadata/_edit_use_anchors_ = true

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 8.0
offset_bottom = 87.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.941176, 0.941176, 0.941176, 1)
theme_override_colors/font_shadow_color = Color(0.827451, 0.756863, 0.788235, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/font = ExtResource("12_e2axg")
theme_override_font_sizes/font_size = 78
text = "Starship Showdown"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Prompt" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 53.0
offset_top = -65.0
offset_right = -51.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="Label" type="Label" parent="Prompt"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5_85q3v")
text = "Insert Credit to Start"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Prompt/Label"]
libraries = {
"": SubResource("AnimationLibrary_ft7pv")
}
autoplay = "flash"

[node name="Control" type="Control" parent="Prompt"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.12

[node name="Label2" type="Label" parent="Prompt"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5_85q3v")
text = "Insert Credit to Start"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Prompt/Label2"]
libraries = {
"": SubResource("AnimationLibrary_ft7pv")
}
autoplay = "flash"

[node name="Selection" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 55.0
offset_top = -100.0
offset_right = -55.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftItems" type="HBoxContainer" parent="Selection"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LeftLeftArrow" type="TextureRect" parent="Selection/LeftItems"]
layout_mode = 2
texture = ExtResource("1_5rmpm")
stretch_mode = 3
flip_h = true

[node name="Control" type="Control" parent="Selection/LeftItems"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LeftShip" type="TextureRect" parent="Selection/LeftItems"]
layout_mode = 2
texture = ExtResource("3_ije5a")
stretch_mode = 5

[node name="Control2" type="Control" parent="Selection/LeftItems"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LeftRightArrow" type="TextureRect" parent="Selection/LeftItems"]
layout_mode = 2
texture = ExtResource("1_5rmpm")
stretch_mode = 3

[node name="Seperator" type="Control" parent="Selection"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.59

[node name="RightItems" type="HBoxContainer" parent="Selection"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RightLeftArrow" type="TextureRect" parent="Selection/RightItems"]
layout_mode = 2
texture = ExtResource("1_5rmpm")
stretch_mode = 3
flip_h = true

[node name="Control3" type="Control" parent="Selection/RightItems"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RightShip" type="TextureRect" parent="Selection/RightItems"]
layout_mode = 2
texture = ExtResource("3_ije5a")
stretch_mode = 5
flip_h = true

[node name="Control4" type="Control" parent="Selection/RightItems"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RightRightArrow" type="TextureRect" parent="Selection/RightItems"]
layout_mode = 2
texture = ExtResource("1_5rmpm")
stretch_mode = 3

[node name="P1Stats" parent="." instance=ExtResource("7_cpdse")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -292.0
offset_right = 483.0
offset_bottom = -82.0
grow_vertical = 0

[node name="P2Stats" parent="." instance=ExtResource("7_cpdse")]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -472.0
offset_top = -292.0
offset_right = -39.0
offset_bottom = -82.0
grow_horizontal = 0
grow_vertical = 0

[node name="ChangeSelectionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_lwe4g")

[node name="UIErrorSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_kvqf3")
